First stage of data-oriented legendary conditions
This moves most of the legendary conditions to be loaded from datapacks, next step would be to apply the same to the blocks/items needed to summon

Also included in this commit is some more 1.17/java 16 related prep